--- a/trello-web-tests/build.gradle
+++ b/trello-web-tests/build.gradle
@@ -23,3 +23,10 @@ test{
     }
 
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+tasks.withType(Test) {
+    systemProperty "file.encoding", "UTF-8"
+}
