--- a/trello-web-tests/build.gradle
+++ b/trello-web-tests/build.gradle
@@ -17,11 +17,21 @@ dependencies {
 }
 
 test{
-    useTestNG()
+    useTestNG{
+        suites 'src/test/resources/testng.xml'
+    }
     if (project.hasProperty('browser')){
         systemProperty 'browser', "${browser}"
     }
+}
 
+task testBoards(type: Test){
+    useTestNG{
+        suites 'src/test/resources/testng-boards.xml'
+    }
+    if (project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
 }
 
 tasks.withType(JavaCompile) {
