--- a/trello-web-tests/build.gradle
+++ b/trello-web-tests/build.gradle
@@ -28,6 +28,9 @@ task testRegression(type: Test){
     if (project.hasProperty('browser')){
         systemProperty 'browser', "${browser}"
     }
+    if (project.hasProperty('target')){
+        systemProperty 'target', "${target}"
+    }
 }
 
 task testBoards(type: Test){
@@ -36,6 +39,9 @@ task testBoards(type: Test){
     }
     if (project.hasProperty('browser')){
         systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')){
+        systemProperty 'target', "${target}"
     }
 }
 
